# map-learner

./: README.md  test.html
.windsurf/rules/: project-overview.md
backend/: .gitignore  pyproject.toml
backend/maplearner/: __init__.py  app.py
backend/prompts/: evaluator.prompt  simple.prompt
docs/: project.md
frontend/: .gitignore  README.md  config.json  index.html  main.js  package-lock.json  package.json  preload.js  script.js  styles.css  web-compat.js  web-server.js
